--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -10,6 +10,7 @@
     android:paddingBottom="8dp"
     android:layout_marginTop="2dp"
     android:layout_marginBottom="2dp"
+    android:foreground="?attr/selectableItemBackground"
     android:background="@drawable/item_list_background"
     >
 
