--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,10 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
-    android:clipToPadding="false"
-    android:clipChildren="false"
+    android:fitsSystemWindows="true"
     android:background="@color/gray_F7"
     tools:context=".ListActivity"
     >
@@ -18,11 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="25dp"
-        android:paddingBottom="25dp"
+        android:paddingBottom="@dimen/basic_bottom_toolbar_height"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         tools:listitem="@layout/video_list_item"
         tools:visibility="visible"
@@ -51,4 +49,67 @@
         tools:text="@tools:sample/lorem/random"
         />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/basic_bottom_toolbar_height"
+        android:layout_gravity="bottom"
+        android:elevation="8dp"
+        app:layout_behavior="liou.rayyuan.chocolist.behaviour.QuickReturnBehaviour"
+        >
+
+        <View
+            android:id="@+id/activity_list_shadow_view"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/shadow"
+            />
+
+        <View
+            android:id="@+id/activity_list_background_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/activity_list_shadow_view"
+            android:background="?attr/colorPrimary"
+            />
+
+        <EditText
+            android:id="@+id/activity_list_search_edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/activity_list_background_view"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="45dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColorHint="#DEB7C2"
+            android:textColor="#F8CDD8"
+            android:background="@drawable/rounded_edittext"
+            android:hint="@string/search_bar_hint"
+            tools:text="@tools:sample/lorem/random"
+            />
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/activity_list_search_cancel_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/activity_list_search_edittext"
+            android:layout_alignBottom="@id/activity_list_search_edittext"
+            android:layout_alignEnd="@id/activity_list_search_edittext"
+            android:layout_marginEnd="16dp"
+            android:visibility="gone"
+            app:tint="@color/pure_white"
+            app:srcCompat="@drawable/ic_sharp_cancel_24px"
+            tools:visibility="visible"
+            />
+
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
