--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="basic_item_text_to_thumb_padding">8dp</dimen>
+    <dimen name="basic_bottom_toolbar_height">72dp</dimen>
 </resources>
