--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,20 +4,170 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EBE9EC"
+        tools:layout_editor_absoluteY="25dp">
+
+    <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/activity_detail_thumb_blur"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            app:placeholderImage="@color/gray_EE"
+            app:actualImageScaleType="centerCrop"
+            app:fadeDuration="200"
+            app:roundingBorderColor="@color/gray_EE"
+            app:roundingBorderWidth="2dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:background="@tools:sample/backgrounds/scenic"
+            />
+
+    <View
+            android:id="@+id/activity_detail_shadow"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:background="@drawable/shadow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/activity_detail_thumb_blur"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+    <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/activity_detail_thumb"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:elevation="1dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="32dp"
+            app:viewAspectRatio="0.7"
+            app:actualImageScaleType="fitCenter"
+            app:fadeDuration="200"
+            app:roundingBorderColor="@color/gray_EE"
+            app:roundingBorderWidth="2dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:background="@tools:sample/backgrounds/scenic"
+            />
 
     <TextView
-            android:id="@+id/detail_test_textView"
+            android:id="@+id/activity_detail_rating"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textSize="14sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/gray_54"
+            app:layout_constraintStart_toEndOf="@+id/activity_detail_thumb"
+            app:layout_constraintTop_toBottomOf="@+id/activity_detail_shadow"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="評分：4.0647"
+            />
+
+    <TextView
+            android:id="@+id/activity_detail_create_at"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textSize="14sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="14sp"
+            android:autoSizeMinTextSize="12sp"
+            android:textColor="@color/gray_54"
+            app:layout_constraintTop_toBottomOf="@+id/activity_detail_rating"
+            app:layout_constraintStart_toStartOf="@+id/activity_detail_rating"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:text="出版日期：2017-10-21"
+            />
+
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="310dp"
-            android:layout_marginStart="176dp"
-            android:layout_marginBottom="354dp"
-            android:layout_marginEnd="159dp"
-            android:text="Hello World!"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/activity_detail_total_view"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/pure_white"
+            android:shadowColor="@color/pure_black"
+            android:textSize="14sp"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            app:layout_constraintBottom_toBottomOf="@+id/activity_detail_shadow"
+            app:layout_constraintStart_toEndOf="@+id/activity_detail_thumb"
+            tools:text="觀看次數：12345"
             />
+
+    <TextView
+            android:id="@+id/activity_detail_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingEnd="8dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:textColor="@color/pure_white"
+            android:shadowColor="@color/pure_black"
+            android:shadowDy="2"
+            android:shadowDx="2"
+            app:layout_constraintTop_toTopOf="@+id/activity_detail_thumb"
+            app:layout_constraintStart_toEndOf="@+id/activity_detail_thumb"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="致我們單純的小美好"
+            />
+
+    <android.support.constraint.Group
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_detail_main_content_group"
+            app:constraint_referenced_ids="activity_detail_rating,activity_detail_title,activity_detail_shadow,activity_detail_thumb,activity_detail_total_view,activity_detail_create_at,activity_detail_thumb_blur"
+            android:visibility="visible"/>
+
+    <TextView
+            android:id="@+id/activity_detail_status_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:maxLines="3"
+            android:ellipsize="end"
+            android:drawableTop="@drawable/ic_outline_info_24px"
+            android:gravity="center"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/activity_detail_retry_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="@tools:sample/lorem/random"
+            />
+
+    <Button
+            android:text="@string/dialog_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_detail_retry_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_detail_status_text"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/activity_detail_status_text"
+            app:layout_constraintEnd_toEndOf="@+id/activity_detail_status_text"/>
+
+    <android.support.constraint.Group
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/activity_detail_error_group"
+            app:constraint_referenced_ids="activity_detail_status_text,activity_detail_retry_button"
+            android:visibility="invisible"/>
+
 </android.support.constraint.ConstraintLayout>
