Put information to Detail Page.

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,8 +15,6 @@
             app:placeholderImage="@color/gray_EE"
             app:actualImageScaleType="centerCrop"
             app:fadeDuration="200"
-            app:roundingBorderColor="@color/gray_EE"
-            app:roundingBorderWidth="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:background="@tools:sample/backgrounds/scenic"
@@ -26,7 +24,7 @@
             android:id="@+id/activity_detail_shadow"
             android:layout_width="wrap_content"
             android:layout_height="150dp"
-            android:background="@drawable/shadow"
+            android:background="@drawable/cover_shadow"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/activity_detail_thumb_blur"
             app:layout_constraintEnd_toEndOf="parent"
