--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -128,7 +128,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/activity_detail_main_content_group"
             app:constraint_referenced_ids="activity_detail_rating,activity_detail_title,activity_detail_shadow,activity_detail_thumb,activity_detail_total_view,activity_detail_create_at,activity_detail_thumb_blur"
-            android:visibility="visible"/>
+            android:visibility="invisible"/>
 
     <TextView
             android:id="@+id/activity_detail_status_text"
@@ -140,7 +140,10 @@
             android:gravity="center"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
+            android:textSize="14sp"
             android:layout_marginTop="8dp"
+            android:textColor="@color/gray_54"
+            android:drawablePadding="4dp"
             app:layout_constraintBottom_toTopOf="@+id/activity_detail_retry_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
@@ -166,6 +169,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/activity_detail_error_group"
             app:constraint_referenced_ids="activity_detail_status_text,activity_detail_retry_button"
-            android:visibility="invisible"/>
+            android:visibility="visible"/>
 
 </android.support.constraint.ConstraintLayout>
